fix desc jumping

--- a/public_html/static/css/style.css
+++ b/public_html/static/css/style.css
@@ -206,7 +206,7 @@ body .pc .em{font-weight:bold;text-align:center;padding:1em 5%;background-color:
 .priceBox .final{padding:0;background-color:#50a0c0;color:#fff;font-size:2.5em;margin-bottom:10px;height:70px;}
 .priceBox .final span{line-height:70px;}
 .priceBox .final abbr{font-size:1rem;display:inline-block;transform: rotate(-90deg);-webkit-transform: rotate(-90deg);-moz-transform: rotate(-90deg);vertical-align:middle;}
-.priceBox .desc{padding:0.2em 0;color:#fff;font-size:1.1rem;margin-bottom:1em;font-weight:100}
+.priceBox .desc{padding:0.4em 0.2em;color:#fff;font-size:1.1rem;font-weight:100;height:30px;line-height:1.2}
 .ltr .priceBox .desc{display:none;}
 .priceBox .detail{padding:0.5em;text-align:initial;}
 .priceBox .detail span{float:right;font-size:1.2em;}
